--- a/style.scss
+++ b/style.scss
@@ -59,4 +59,10 @@ body {
             }
         }
     }
+    .updated {
+        span {
+            color: #333;
+            font-size: 24px;
+        }
+    }
 }
