--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  min-height: 100vh;
 }
 
 .container .country--name,
@@ -42,6 +43,16 @@ body {
 
 .container .country--information div,
 .container .theworld--information div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 25px;
 }
 
@@ -86,5 +97,6 @@ body {
 .container .updated span {
   color: #333;
   font-size: 24px;
+  font-style: italic;
 }
 /*# sourceMappingURL=style.css.map */
