--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
 }
 .container {
     .country--name,
@@ -26,6 +27,9 @@ body {
         margin-top: 50px;
         margin-bottom: 50px;
         div {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             margin-bottom: 25px;
             h3 {
                 font-weight: 300;
@@ -63,6 +67,7 @@ body {
         span {
             color: #333;
             font-size: 24px;
+            font-style: italic;
         }
     }
 }
