--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@ body {
     .country--information,
     .theworld--information {
         margin-top: 50px;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
         div {
             display: flex;
             flex-direction: column;
@@ -61,6 +61,16 @@ body {
                     color: #666666;
                 }
             }
+        }
+    }
+    .other-countries {
+        margin-bottom: 30px;
+        select {
+            padding: 5px;
+            cursor: pointer;
+            outline: none;
+            border-radius: 5px;
+            background: rgb(255, 255, 255);
         }
     }
     .updated {
