--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,18 @@ body {
   min-height: 100vh;
 }
 
+.container .introduction {
+  margin-bottom: 50px;
+}
+
+.container .introduction h1 {
+  color: #c9302c;
+  text-transform: uppercase;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 550;
+  font-size: 28px;
+}
+
 .container .country--name,
 .container .theworld {
   background: #c9302c;
