--- a/css/style.scss
+++ b/css/style.scss
@@ -75,7 +75,11 @@ body {
     }
     .other-countries {
         margin-bottom: 30px;
-        font-size: 28px;
+        font-size: 24px;
+        a {
+            border-top: 1px solid #007bff;
+            border-bottom: 1px solid #007bff;
+        }
     }
     .updated {
         span {
