--- a/css/style-datatable.css
+++ b/css/style-datatable.css
@@ -14,6 +14,17 @@ body {
           align-items: center;
 }
 
+#mask-popup {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 #introduction {
   margin: 30px 0;
 }
@@ -98,6 +109,67 @@ body {
   margin: 30px 0;
 }
 
+#popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  z-index: 100;
+  -webkit-transition: opacity 3s;
+  transition: opacity 3s;
+  -webkit-transition-delay: 1.5s;
+          transition-delay: 1.5s;
+  display: none;
+}
+
+#popup .message {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  font-size: 18px;
+  text-align: center;
+}
+
+#popup .btn {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#popup .btn button {
+  padding: 15px 25px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  min-width: 100px;
+  margin: 0 10px;
+}
+
+#popup .btn #accept {
+  color: #fff;
+  background-color: #268fff;
+}
+
+#popup .btn #cancel {
+  color: #4b4b4b;
+  background-color: #ebebeb;
+}
+
 @media screen and (max-width: 768px) {
   #introduction h1 {
     font-size: 18px !important;
@@ -120,6 +192,9 @@ body {
   #data-table #data span {
     font-size: 11px !important;
   }
+  #popup .message {
+    font-size: 16px !important;
+  }
 }
 
 @media screen and (max-width: 360px) {
@@ -137,6 +212,10 @@ body {
   }
   #data-table #data span {
     font-size: 10px !important;
+  }
+  #popup button {
+    padding: 10px 15px !important;
+    min-width: 60px !important;
   }
 }
 /*# sourceMappingURL=style-datatable.css.map */
