--- a/css/style-datatable.scss
+++ b/css/style-datatable.scss
@@ -8,6 +8,16 @@ body {
     display: flex;
     align-items: center;
 }
+#mask-popup {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    display: none;
+    background-color: rgba($color: #000000, $alpha: 0.6);
+}
 #introduction {
     margin: 30px 0;
     h1 {
@@ -81,6 +91,48 @@ body {
     margin: 30px 0;
 }
 
+#popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 40px 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    z-index: 100;
+    transition: opacity 3s;
+    transition-delay: 1.5s;
+    display: none;
+    .message {
+        flex-basis: 100%;
+        font-size: 18px;
+        text-align: center;
+    }
+    .btn {
+        flex-basis: 100%;
+        display: flex;
+        justify-content: space-around;
+        button {
+            padding: 15px 25px;
+            outline: none;
+            border: none;
+            border-radius: 5px;
+            min-width: 100px;
+            margin: 0 10px;
+        }
+        #accept {
+            color: #fff;
+            background-color: #268fff;
+        }
+        #cancel {
+            color: rgb(75, 75, 75);
+            background-color: #ebebeb;
+        }
+    }
+}
 
 @media screen and (max-width: 768px) {
     #introduction {
@@ -109,6 +161,11 @@ body {
             }
         }
     }
+    #popup {
+        .message {
+            font-size: 16px !important;
+        }
+    }
 }
 @media screen and (max-width: 360px) {
     #introduction {
@@ -128,6 +185,12 @@ body {
             span {
                 font-size: 10px !important;
             }
+        }
+    }
+    #popup {
+        button {
+            padding: 10px 15px !important;
+            min-width: 60px !important;
         }
     }
 }
