--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ body {
 
 .container .other-countries {
   margin-bottom: 30px;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 .container .other-countries a {
@@ -124,5 +124,11 @@ body {
   color: #333;
   font-size: 24px;
   font-style: italic;
+}
+
+@media screen and (max-width: 768px) {
+  .introduction h1 {
+    font-size: 16px !important;
+  }
 }
 /*# sourceMappingURL=style.css.map */
