--- a/css/provinces.scss
+++ b/css/provinces.scss
@@ -26,7 +26,7 @@
             height: 15px;
         }
         span {
-            margin-left: 5px;
+            margin-left: 2px;
             margin-right: 10px;
         }
         .confirmed {
@@ -50,13 +50,20 @@
             &:nth-child(odd) {
                 background-color: rgb(248, 248, 248);
             }
+            span {
+                font-weight: 550;
+            }
             div.line {
-                position: relative;
                 padding: 5px 0;
-                border-radius: 10px;
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
                 background-color: blue;
             }
         }
+    }
+    #loading {
+        font-size: 28px;
+        font-weight: 550;
     }
 }
 @media screen and (max-width: 768px) {
@@ -72,7 +79,7 @@
             font-size: 10px;
         }
         .row {
-            div {
+            div.line {
                 padding: 3px 0 !important;
             }
         }
