--- a/css/style-datatable.css
+++ b/css/style-datatable.css
@@ -51,7 +51,6 @@ body {
 #data-table {
   padding: 10px 20px;
   border: 1px solid #aaaaaa;
-  border-radius: 10px;
 }
 
 #data-table .thead {
@@ -79,12 +78,15 @@ body {
   overflow: auto;
 }
 
+#data-table #data .country div:nth-child(odd) {
+  background-color: whitesmoke;
+}
+
 #data-table #data .country div span {
   display: inline-block;
   color: black;
   font-weight: 450;
   padding: 10px 0;
-  border-bottom: 1px solid #aaaaaa;
 }
 
 #data-table #data .country div span img {
